5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4479/executions/1715_3031.log
== TEST (2019-05-02 16:21:53) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))
c = float(input("valor de x**2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1)
-- ERROR:
File "XXXX", line 7
    if(x<=1)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:21:55) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))
c = float(input("valor de x**2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1)
-- EXECUTION TIME:
0.205517
-- ERROR:
  File "/home/codebench/codes/1715/3031/main.py", line 7
    if(x<=1)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:21:57) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))
c = float(input("valor de x**2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1)
-- ERROR:
File "XXXX", line 7
    if(x<=1)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:21:58) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))
c = float(input("valor de x**2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1)
-- EXECUTION TIME:
0.210294
-- ERROR:
  File "/home/codebench/codes/1715/3031/main.py", line 7
    if(x<=1)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:57) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:58) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:58) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:58) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:58) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:58) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:58) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:58) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:58) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:58) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:58) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:58) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:58) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:58) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:58) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:58) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:58) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:58) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:58) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:58) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:58) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:58) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:58) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:58) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:58) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:58) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:59) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:59) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:59) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:59) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:59) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:59) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:59) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:59) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:59) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:59) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:59) 
-- CODE:
a = float(input("valor de 1:"))
b = float(input("valor de 2:"))

print("Entradas:", a,",", b,",",c)

if(x<=1):
-- ERROR:
File "XXXX", line 7
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:30:46) 
-- CODE:
a = int(input("1:"))
b = int(input("2:"))
c = int(input("x**2:"))
d = int(input("x**3"))
 print("Entradas:", a,",", b,",", c,",", d)
-- ERROR:
File "XXXX", line 5
    print("Entradas:", a,",", b,",", c,",", d)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:04) 
-- CODE:
a = int(input("1:"))
b = int(input("2:"))
c = int(input("x**2:"))
d = int(input("x**3"))
 print("Entradas:", a,",", b,",", c,",", d)
	
if(x<=1):
print("Entradas:", a)

elif(1 < x <= 2):
print("Entradas:", b)

else:
	print("Entradas:", c)
-- ERROR:
File "XXXX", line 5
    print("Entradas:", a,",", b,",", c,",", d)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:21) 
-- CODE:
a = int(input("1:"))
b = int(input("2:"))
c = int(input("x**2:"))
d = int(input("x**3"))
 print("Entradas:")
	
if(x<=1):
print("Entradas:", a)

elif(1 < x <= 2):
print("Entradas:", b)

else:
	print("Entradas:", c)
-- ERROR:
File "XXXX", line 5
    print("Entradas:")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:39) 
-- CODE:
a = int(input("1:"))
b = int(input("2:"))
c = int(input("x**2:"))
d = int(input("x**3"))

if(x<=1):
print("Entradas:", a)

elif(1 < x <= 2):
print("Entradas:", b)

else:
	print("Entradas:", c)
-- ERROR:
File "XXXX", line 7
    print("Entradas:", a)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:38:07) 
-- CODE:
a = int(input("1:"))
b = int(input("2:"))
c = int(input("x**2:"))
d = int(input("x**3"))

if(x<=1):
print("Entradas:")

elif(1 < x <= 2):
print("Entradas:")

else:
	print("Entradas:")
-- ERROR:
File "XXXX", line 7
    print("Entradas:")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:38:26) 
-- CODE:
a = int(input("1:"))
b = int(input("2:"))
c = int(input("x**2:"))
d = int(input("x**3"))

if(x<=1):
print("Entradas:")

elif(1 < x <= 2):
print("Entradas:")

else:
	print("Entradas:")
-- ERROR:
File "XXXX", line 7
    print("Entradas:")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:38:28) 
-- CODE:
a = int(input("1:"))
b = int(input("2:"))
c = int(input("x**2:"))
d = int(input("x**3"))

if(x<=1):
print("Entradas:")

elif(1 < x <= 2):
print("Entradas:")

else:
	print("Entradas:")
-- EXECUTION TIME:
0.183296
-- ERROR:
  File "/home/codebench/codes/1715/3031/main.py", line 7
    print("Entradas:")
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:38:28) 
-- CODE:
a = int(input("1:"))
b = int(input("2:"))
c = int(input("x**2:"))
d = int(input("x**3"))

if(x<=1):
print("Entradas:")

elif(1 < x <= 2):
print("Entradas:")

else:
	print("Entradas:")
-- ERROR:
File "XXXX", line 7
    print("Entradas:")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:39:13) 
-- CODE:
a = int(input("1:"))
b = int(input("2:"))
c = int(input("x**2:"))
d = int(input("x**3"))

if(x<=1):
print("a:")

elif(1 < x <= 2):
print("b:")

else:
	print("c:")
-- ERROR:
File "XXXX", line 7
    print("a:")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:42:16) 
-- CODE:
a = int(input("1:"))
b = int(input("2:"))
c = int(input("x**2:"))
d = int(input("x**3"))

if(x<=1):
print(round("Entradas:", a))

elif(1 < x <= 2):
print(round("Entradas:", b))

else:
	print(round("Entradas:", c)
-- ERROR:
File "XXXX", line 7
    print(round("Entradas:", a))
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:42:32) 
-- CODE:
a = int(input("1:"))
b = int(input("2:"))
c = int(input("x**2:"))
d = int(input("x**3"))

if(x<=1):
print(round("Entradas:"))

elif(1 < x <= 2):
print(round("Entradas:"))

else:
	print(round("Entradas:")
-- ERROR:
File "XXXX", line 7
    print(round("Entradas:"))
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:45:43) 
-- CODE:
a = int(input("1:"))
b = int(input("2:"))
c = int(input("x**2:"))
d = int(input("x**3"))

if(x<=1):
print(round("Entradas:"))

elif(1 < x <= 2):
print(round("Entradas:"))

else:
	print(round("Entradas:")
-- ERROR:
File "XXXX", line 7
    print(round("Entradas:"))
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:47:28) 
-- CODE:
a = int(input("1:"))
b = int(input("2:"))
c = int(input("x**2:"))
d = int(input("x**3"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '3.6'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
